# MachineVision

./: .gitignore  pyproject.toml
project1/: frame_providers.py  tracker.py
project2/: detector.py
