[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machine-vision"
version = "0.1.0"
description = "Small projects from machine vision subject"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "numpy>=2.2.0",
    "opencv-python>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["."]
extend-exclude = [".venv", "dist", "build", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E203"]

[tool.ruff.format]
quote-style = "double"
