[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machine-vision"
version = "0.1.0"
description = "Small projects from machine vision subject"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "numpy>=2.2.0",
    "opencv-python>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.ruff]
src = ["src"]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "N", "I", "B", "UP", "RUF", "SIM", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
